# proyecto-final-2025-2-equipo-dinamita-alfa-lobo-buena-onda

./: CMakeLists.txt  README.md  Rubrica Proyecto Programación III 2025.xlsx
carpeta_con_link_a_video/: video_link.txt
docs/: BIBLIOGRAFIA.md  README.md
include/utec/algebra/: Tensor.h
include/utec/apps/: ControllerDemo.h  PatternClassifier.h  SequencePredictor.h
include/utec/nn/: neural_network.h  nn_activation.h  nn_dense.h  nn_interfaces.h  nn_loss.h  nn_optimizer.h
pong_ai/: CMakeLists.txt
pong_ai/include/utec/algebra/: tensor.h
pong_ai/include/utec/apps/: ControllerDemo.h  PatternClassifier.h  SequencePredictor.h
pong_ai/include/utec/nn/: neural_network.h  nn_activation.h  nn_dense.h  nn_interfaces.h  nn_loss.h  nn_optimizer.h
pong_ai/src/: main.cpp
pong_ai/src/utec/apps/: ControllerDemo.cpp  PatternClassifier.cpp  SequencePredictor.cpp
pong_ai/tests/: test_applications.cpp  test_neural_network.cpp  test_tensor.cpp
src/utec/apps/: ControllerDemo.cpp  PatternClassifier.cpp  SequencePredictor.cpp
tests/: test_neural_network.cpp  test_tensor.cpp
tests/nn_tests/: SequencePredictor.cpp
tests/nn_tests/cppcheck/: cppcheck.cpp
tests/nn_tests/question_1/test_1/: question_1_test_1.in  test.yml  test_1.cpp
tests/nn_tests/question_1/test_2/: question_1_test_2.in  test.yml  test_2.cpp
tests/nn_tests/question_1/test_3/: question_1_test_3.in  test.yml  test_3.cpp
tests/nn_tests/question_1/test_4/: question_1_test_4.in  test.yml  test_4.cpp
tests/nn_tests/question_2/test_1/: question_2_test_1.in  test.yml  test_1.cpp
tests/nn_tests/question_2/test_2/: question_2_test_2.in  test.yml  test_2.cpp
tests/nn_tests/question_2/test_3/: question_2_test_3.in  test.yml  test_3.cpp
tests/nn_tests/question_2/test_4/: question_2_test_4.in  test.yml  test_4.cpp
tests/nn_tests/question_3/test_1/: test.yml  test_1.cpp
tests/nn_tests/question_3/test_2/: question_3_test_2.in  test.yml  test_2.cpp
tests/nn_tests/question_3/test_3/: question_3_test_3.in  test.yml  test_3.cpp
tests/nn_tests/question_3/test_4/: question_3_test_4.in  test.yml  test_4.cpp
tests/nn_tests/question_4/test_1/: test.yml  test_1.cpp
tests/nn_tests/question_4/test_2/: question_4_test_2.in  test.yml  test_2.cpp
tests/nn_tests/question_4/test_3/: question_4_test_3.in  test.yml  test_3.cpp
tests/nn_tests/question_4/test_4/: question_4_test_4.in  test.yml  test_4.cpp
tests/nn_tests/question_5/test_1/: question_5_test_1.in  test.yml  test_1.cpp
tests/nn_tests/question_5/test_2/: question_5_test_2.in  test.yml  test_2.cpp
tests/nn_tests/question_5/test_3/: question_5_test_3.in  test.yml  test_3.cpp
tests/nn_tests/question_5/test_4/: question_5_test_4.in  test.yml  test_4.cpp
tests/project/: test_applications.cpp  test_neural_network.cpp  test_tensor.cpp
